FIxed mobile scroll jumping bug

--- a/src/component/Hero/Hero.module.css
+++ b/src/component/Hero/Hero.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   gap: 20px;
   text-align: center;
-  height: 100dvh;
+  height: 100vh;
   min-height: 500px;
   user-select: none;
 }
