--- a/src/component/Projects/Projects.module.css
+++ b/src/component/Projects/Projects.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   text-align: center;
   padding: 1.5rem;
-  min-height: 100dvh;
+  min-height: 120vh;
 
   img {
     width: 200px;
